[updates_landing] Fixed scrollbar issue with lines of code per repo. TODO: Order lines of code by # of lines

--- a/src/modules/Projects/Projects.module.css
+++ b/src/modules/Projects/Projects.module.css
@@ -70,15 +70,16 @@
 .repo_language_stats {
     display: flex;
     flex-direction: column;
-    min-height: fit-content;
-    max-height: 95vh;
-    overflow-y: auto;
     min-width: 15vw;
 }
 
 .repo_language_stats_list {
     display: flex;
     flex-direction: column;
+    min-height: fit-content;
+    max-height: 95vh;
+    overflow-y: auto;
+    scrollbar-width: none;
     gap: 0.25em;
 }
 
